--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
 }
 
 .logo {
@@ -23,3 +27,11 @@ a {
   /* this removes the line under the links */
   text-decoration: none;
 }
+
+ul {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  gap: 10px;
+}
+
