--- a/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
+++ b/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
@@ -4,11 +4,21 @@ html {
   margin: 0;
 }
 
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .container {
   text-align: center;
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  display: grid;
+  grid-template-columns: 400px 1200px;
+  grid-template-rows: 110px 110px 555px 110px;
+  gap: 15px;
 }
 
 .container div {
@@ -22,10 +32,13 @@ html {
 
 .header {
   background-color: #006157;
+  grid-row: 1/2;
+  grid-column: 1/3;
 }
 
 .sidebar {
   background-color: #005B94;
+  grid-row: 2/span 2;
 }
 
 .nav {
@@ -38,6 +51,7 @@ html {
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1 / span 2;
 }
 
 .article p {
