--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -1,10 +1,14 @@
 * {
   margin: 0;
   padding: 0;
+  gap: 3px;
 }
 
 .container {
   text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  /* grid-template-rows: 0.5fr 0.2fr 5fr 0.5fr; */
 }
 
 .container div {
@@ -17,15 +21,37 @@
 
 .header {
   background-color: #393f4d;
+  grid-area: 1/1/span 1/span 2;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  align-items: center;
+  gap: 50px;
 }
+
+.logo {
+  justify-self: start;
+}
+
+.menu ul {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 50px;
+}
+
+
 
 .menu ul,
 .menu li {
   font-size: 16px;
+  list-style: none;
 }
 
 .sidebar {
   background-color: #C50208;
+  grid-area: 2/1/span 2/span 1;
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  gap: 35px;
 }
 
 .sidebar .photo {
@@ -34,6 +60,12 @@
   font-size: 12px;
   font-weight: normal;
   border-radius: 10px;
+}
+
+.sidebar .photo, .sidebar .side-content {
+  display: grid;
+  justify-content: center;
+  align-items: center;
 }
 
 
@@ -46,15 +78,26 @@
 
 .nav {
   background-color: #C50208;
+  grid-area: 2/2;
+}
+
+.nav ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .nav ul li {
   font-size: 16px;
   text-transform: uppercase;
+  list-style: none;
 }
 
 .article {
   background-color: #bccbde;
+  grid-area: 3/2;
+  display: grid;
+  gap: 15px;
+  grid-template-columns: repeat(auto-fit, minmax(250px,1fr));
 }
 
 .article p {
@@ -68,6 +111,7 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  height: 200px;
 }
 
 .card p {
@@ -83,6 +127,7 @@
 
 .footer {
   background-color: #393f4d;
+  grid-column: span 2;
 }
 
 .footer p {
