--- a/advanced-html-css/animation/02-pop-up/style.css
+++ b/advanced-html-css/animation/02-pop-up/style.css
@@ -35,9 +35,10 @@ button {
   top: 50%;
   left: 50%;
   transform-origin: center;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, calc(-100vh - 50%));
+  transition: transform 0.4s ease-in-out;
   pointer-events: none;
-  opacity: 0%;
+  opacity: 0%;      
   text-align: center;
 }
 
@@ -56,6 +57,7 @@ button {
 .popup-modal.show {
   opacity: 100%;
   pointer-events: all;
+  transform: translate(-50%, -50%);
 }
 
 .backdrop.show {
