--- a/advanced-html-css/animation/03-dropdown-menu/style.css
+++ b/advanced-html-css/animation/03-dropdown-menu/style.css
@@ -17,7 +17,6 @@
   padding: 0;
   margin: 0;
   background-color: rgb(99, 97, 97);
-
   display: none;
 }
 
@@ -27,6 +26,18 @@ ul.dropdown-menu li:hover {
 
 .visible {
   display: block;
+  animation: dropdown-animation 0.3s linear;
+  transform-origin: top;
 }
 
-
+@keyframes dropdown-animation {
+  from {
+    transform: scale(1,0);
+  }
+  85% {
+    transform: scale(1,1.1);
+  }
+  to {
+    transform: scale(1,1);
+  }
+}
